# camkes-vm-examples

apps/Arm/vm_multi/: vm_multi.camkes
apps/Arm/vm_multi/overlay_files/: vm0_bridge_setup.sh
apps/Arm/vm_serial/: CMakeLists.txt  vm_serial.camkes
apps/Arm/vm_serial_server/: vm_serial_server.camkes
apps/Arm/vm_serial_server/exynos5422/: devices.camkes
apps/Arm/vm_serial_server_qemu/: CMakeLists.txt  settings.cmake
apps/Arm/vm_serial_server_qemu/qemu-arm-virt/: devices.camkes
apps/x86/minimal/: minimal.camkes
apps/x86/multi/: CMakeLists.txt  multi.camkes
apps/x86/multi/src/: cross_vm_connections_vm0.c  cross_vm_connections_vm1.c
apps/x86/supermicro/: CMakeLists.txt  README.md  supermicro.camkes
